argocd-managed/kube-prometheus/Ingress.grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: grafana
spec:
 rules:
   - host: grafana.my-minikube
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: grafana
               port:
                 number: 3000
