argocd-managed/kube-prometheus/Ingress.prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: prometheus
spec:
 rules:
   - host: prometheus.meu-minikube.com
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: prometheus-k8s
               port:
                 number: 9090
